<!--
  ~ Copyright (C) 2020 - Present, OPPO Mobile Comm Corp., Ltd. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<resources>
    <string name="app_name">snndemo</string>

    <string name="menu_contrast_enhancement">Contrast Enhancement</string>
    <string name="menu_enlightening">Enlightening</string>
    <string name="menu_gamma_correction">Gamma Correction</string>
    <string name="menu_white_balance">White Balance</string>
    <string name="menu_sharpening">Sharpening</string>

    <string name="general">General</string>
    <string name="video">Video</string>
    <string name="toggle_save_as">Toggle Save As</string>
    <string name="key_toggle_save_as">@string/toggle_save_as</string>
    <string name="default_save_path">Default Save Path</string>
    <string name="key_default_save_path">@string/default_save_path</string>
    <string name="settings_title">Settings</string>
    <string name="back_button">Back</string>
    <string name="start_record">Start</string>
    <string name="stop_record">Stop</string>
    <string name="save_as">Save As</string>
    <string name="settings">Settings</string>
    <string name="contrast_enhancement">Contrast Enhancement</string>
    <string name="super_resolution">Super Resolution</string>
    <string name="clearance">Clearance</string>
    <string name="traditional_opencv_on_cpu">Traditional OpenCV on CPU</string>
    <string name="fastcv_on_dsp">FastCV on DSP</string>
    <string name="ai_denoise">AI Denoise</string>
    <string name="ai_denoise_clearance">AI Denoise Clearance</string>
    <string name="start">Start</string>
    <string name="fps">FPS=</string>
    <string name="pass_through">Pass-through</string>
    <string name="clearance_sprint3_on_dsp">clearance (sprint3) on DSP</string>
    <string name="clearance_sprint4_on_dsp">clearance (sprint4) on DSP</string>
    <string name="no_classifier">No classifier</string>
    <string name="resnet18_classifier">Resnet18</string>
    <string name="mobilenetv2_classifier">MobileNetv2</string>
    <string name="no_detection">No detection</string>
    <string name="yolov3_detection">Yolov3</string>
    <string name="classifier_result"></string>
    <string name="no_style">No Style</string>
    <string name="style_candy">Style: Candy</string>
    <string name="style_mosaic">Style: Mosaic</string>
    <string name="style_pointilism">Style: Pointilism</string>
    <string name="style_rain_princess">Style: Rain Princess</string>
    <string name="style_udnie">Style: Udnie</string>
</resources>
