<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 - 2022 OPPO. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/action_bar_items">
        <item
            android:id="@+id/open_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_open_settings"
            app:showAsAction="always" />
    </group>

    <item
        android:id="@+id/models_header"
        android:title="Models:">
    </item>

    <group
        android:id="@+id/models"
        android:checkableBehavior="single">
        <item
            android:id="@+id/spatialdenoise"
            android:title="Spatial Denoise">
        </item>

        <item android:id="@+id/yolov3_detection"
            android:title="@string/yolov3_detection">
        </item>

        <item
            android:id="@+id/classifiers_choices"
            android:title="Classifiers:">
            <menu>
            <group
                android:id="@+id/classifiers_choices1"
                android:checkableBehavior="single">
                <item android:id="@+id/resnet18_classifier"
                    android:title="@string/resnet18_classifier">
                </item>
                <item android:id="@+id/mobilenetv2_classifier"
                    android:title="@string/mobilenetv2_classifier">
                </item>
            </group>
            </menu>
        </item>

        <item
            android:id="@+id/style_transfer_choices"
            android:title="Style Transfer">
            <menu>
                <group
                    android:id="@+id/style_transfer_choices1"
                    android:checkableBehavior="single">
                <item android:id="@+id/style_candy"
                    android:title="@string/style_candy">
                </item>
                <item android:id="@+id/style_mosaic"
                    android:title="@string/style_mosaic">
                </item>
                <item android:id="@+id/style_pointilism"
                    android:title="@string/style_pointilism">
                </item>
                <item android:id="@+id/style_rain_princess"
                    android:title="@string/style_rain_princess">
                </item>
                <item android:id="@+id/style_udnie"
                    android:title="@string/style_udnie">
                </item>
                </group>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/settings_header"
        android:title="Settings:">
    </item>

    <group
        android:id="@+id/detection_shader_choices"
        android:checkableBehavior="single"
        android:visible="false">
        <!-- TODO: add handler for this setting -->
        <item
            android:id="@+id/detection_fragment_shader"
            android:title="Fragment Shader">
        </item>
        <item
            android:id="@+id/detection_compute_shader"
            android:title="Compute Shader">
        </item>
    </group>

    <group
        android:id="@+id/fp_choices"
        android:checkableBehavior="single">
        <item
            android:id="@+id/fp32"
            android:title="FP32"
            android:checked="true">
        </item>
        <item
            android:id="@+id/fp16"
            android:title="FP16">
        </item>
    </group>

</menu>
