<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 - 2022 OPPO. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/video">
        <EditTextPreference
            android:defaultValue="defaultPath"
            android:key="@string/key_default_save_path"
            android:title="@string/key_default_save_path"
            app:allowDividerBelow="true" app:allowDividerAbove="true"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_toggle_save_as"
            android:title="@string/toggle_save_as"
            app:allowDividerBelow="true" app:allowDividerAbove="true"/>
    </PreferenceCategory>


</androidx.preference.PreferenceScreen>